# GenAi_Langchain

./: .env  main.py  memory.ipynb  pyproject.toml  requirements.txt  structuredoutput.ipynb
generativeai/: agentmultipletools.ipynb  agents.ipynb  langchain.ipynb  messages.ipynb  tools.ipynb
